Text and artwork for the memberpage and added nav for memberpage.

--- a/Frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.html
@@ -7,8 +7,8 @@
             </a>
         </div>
         <div class="nav" >
-            <a [routerLink]="['/']" style="color:red">
-                Null
+            <a [routerLink]="[path.member]">
+                Member
             </a>
         </div>
         <div class="nav" >
