Text and artwork for the register page. Complete the register component. Add some decorate.(1bug)

--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
     </div>
     <div>
         <h1 class="great-again">
-            Let us make Department of Mathematics great again.
+            Let us make the Department of Mathematics great again.
         </h1>
     </div>
     <!-- <button style="display: flex;margin: auto;"(click)="playAnimation1A();playAnimation1B()">
