--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -1,7 +1,9 @@
 .body {
-    background-color: #000000;
-    margin-left: 0;
-    margin-top: 0;
-    z-index: -1;
-    position: relative;
-  }
+  background-color: #000;
+  color: #fff;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 5vw;
+  padding: 20px;
+  text-align: center;
+  margin-top: 0.5vh;
+}
