--- a/Frontend/src/app/pages/member/member.component.html
+++ b/Frontend/src/app/pages/member/member.component.html
@@ -1,9 +1,11 @@
 <div class="view">
     <!-- G1Professor -->
-    <div class="title-box">
-        <h1 class="title">
-            第一屆
-        </h1>
+    <div class="animation-container">
+        <div class="title-box">
+            <h1 class="title">
+                第一屆
+            </h1>
+        </div>
     </div>
     <div class="rowframe">
         <div class="profileframe">
@@ -127,10 +129,12 @@
     <!-- G1Teammate -->
 
     <!-- G2Professor -->
-    <div class="title-box">
-        <h1 class="title">
-            第二屆
-        </h1>
+    <div class="animation-container">
+        <div class="title-box">
+            <h1 class="title">
+                第二屆
+            </h1>
+        </div>
     </div>
     <div class="rowframe">
         <div class="profileframe">
