Complete the login and logout feature, turn some navbar to private and connect SQL.

--- a/Frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.html
@@ -58,8 +58,7 @@
 <!-- Public -->
 
 <!-- Private -->
-<div>
-    <!-- *ngIf="isLoggedIn()" -->
+<div *ngIf="isLoggedIn()">
     <div class="navbar">
         <div class="nav-private">
             <a [routerLink]="[path.square]">
