--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -108,7 +108,7 @@
                 </p>
                 <a [routerLink]="['/' + path.forgotpassword]">找回密碼</a>
             </div>
-            <button>
+            <button (click)="login()">
                 登入
             </button>
         </div>
