--- a/Frontend/src/app/pages/register/register.component.html
+++ b/Frontend/src/app/pages/register/register.component.html
@@ -1,19 +1,22 @@
-<h2>註冊帳號</h2>
+<div>
+  <h2>註冊帳號</h2>
+  <div>
+    <label>帳號：</label>
+    <input [(ngModel)]="username">
+  </div>
+  <div>
+    <label>密碼：</label>
+    <input type="password" [(ngModel)]="password">
+  </div>
+  <div>
+    <label>Email：</label>
+    <input [(ngModel)]="email">
+  </div>
+  <button (click)="register()">註冊</button>
+</div>
 
-<div>
-  <label>帳號：</label>
-  <input [(ngModel)]="username">
-</div>
-<div>
-  <label>密碼：</label>
-  <input type="password" [(ngModel)]="password">
-</div>
-<div>
-  <label>Email：</label>
-  <input [(ngModel)]="email">
-</div>
-
-<button (click)="register()">註冊</button>
+<h3>沒收到驗證信？</h3>
+<a [routerLink]="['/' + path.resendverification]">重新寄送</a>
 
 <p *ngIf="successMessage" style="color: green">{{ successMessage }}</p>
 <p *ngIf="error" style="color: red">{{ error }}</p>
