Adjusted the photos on the team members page and cleaned up the images in the public directory.

--- a/Frontend/src/app/pages/member/member.component.html
+++ b/Frontend/src/app/pages/member/member.component.html
@@ -10,24 +10,35 @@
     <div class="rowframe">
         <div class="profileframe">
             <div class="role">
-                教授
+                副教授兼系主任
             </div>
             <div class="profile">
-                <img class="profile" src="https://www.math.fju.edu.tw/images/tlpteam/m_tcyu-1722484227.jpg">
+                <img class="profile" src="https://www.math.fju.edu.tw/images/tlpteam/l_chien-chang-yen-1626176770.jpg">
             </div>
             <span class="name">
-                俞贊城
+                嚴健彰
             </span>
         </div>
         <div class="profileframe">
             <div class="role">
-                教授
+                助理教授
             </div>
             <div class="profile">
                 <img class="profile" src="https://www.math.fju.edu.tw/images/tlpteam/l_jun-jie-pan-1626177577.jpg">
             </div>
             <span class="name">
                 潘俊杰
+            </span>
+        </div>
+        <div class="profileframe">
+            <div class="role">
+                助理教授
+            </div>
+            <div class="profile">
+                <img class="profile" src="https://www.math.fju.edu.tw/images/tlpteam/m_tcyu-1722484227.jpg">
+            </div>
+            <span class="name">
+                俞讚城
             </span>
         </div>
     </div>
@@ -51,7 +62,7 @@
                 副團長
             </div>
             <div class="profile">
-                <img class="profile" src="member/LYH.jpg">
+                <img style="width: 18vw;display: flex; margin: auto;" class="profile" src="member/LYH.jpg">
             </div>
             <span class="name">
                 盧詠涵
