--- a/Frontend/src/app/pages/public/register/register/register.component.html
+++ b/Frontend/src/app/pages/public/register/register/register.component.html
@@ -1,24 +1,26 @@
-<div>
+<div class="register-container">
   <h2>註冊帳號</h2>
-  <div>
-    <label>帳號：</label>
-    <input [(ngModel)]="username">
-  </div>
-  <div>
-    <label>密碼：</label>
-    <input type="password" [(ngModel)]="password">
-  </div>
-  <div>
-    <label>郵箱：</label>
-    <input [(ngModel)]="email">
-  </div>
-  <button (click)="register()">註冊</button>
-</div>
+  <form (ngSubmit)="register()" autocomplete="off">
+    <div class="form-group">
+      <label for="username">帳號：</label>
+      <input id="username" [(ngModel)]="username" name="username" required>
+    </div>
+    <div class="form-group">
+      <label for="password">密碼：</label>
+      <input id="password" type="password" [(ngModel)]="password" name="password" required>
+    </div>
+    <div class="form-group">
+      <label for="email">郵箱：</label>
+      <input id="email" type="email" [(ngModel)]="email" name="email" required>
+    </div>
+    <button class="register-btn" type="submit">註冊</button>
+  </form>
 
-<div>
-  <p>沒收到驗證信？</p>
-  <a [routerLink]="['resendverification']">重新寄送</a>
-</div>
+  <div class="resend-section">
+    <p>沒收到驗證信？</p>
+    <a [routerLink]="['resendverification']">重新寄送</a>
+  </div>
 
-<p *ngIf="successMessage" style="color: green">{{ successMessage }}</p>
-<p *ngIf="error" style="color: red">{{ error }}</p>
+  <p *ngIf="successMessage" class="success-message">{{ successMessage }}</p>
+  <p *ngIf="error" class="error-message">{{ error }}</p>
+</div>
