--- a/Frontend/src/app/pages/public/member/member.component.html
+++ b/Frontend/src/app/pages/public/member/member.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="view">
     <!-- G1Professor -->
     <div class="animation-container">
@@ -51,7 +52,7 @@
                 團長
             </div>
             <div class="profile">
-                <img style="width: 18vw;display: flex; margin: auto;" class="profile" src="member/JWH.png">
+                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/JWH.png">
             </div>
             <span class="name">
                 簡偉恆
@@ -62,7 +63,7 @@
                 副團長
             </div>
             <div class="profile">
-                <img style="width: 18vw;display: flex; margin: auto;" class="profile" src="member/LYH.jpg">
+                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/LYH.jpg">
             </div>
             <span class="name">
                 盧詠涵
@@ -117,7 +118,7 @@
                 UI,UX設計
             </div>
             <div class="profile">
-                <img style="width: 20vw;display: flex; margin: auto;" class="profile" src="member/ZZW.jpg">
+                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/ZZW.jpg">
             </div>
             <span class="name">
                 鄭兆崴
@@ -148,6 +149,17 @@
         </div>
     </div>
     <div class="rowframe">
+        <div class="profileframe">
+            <div class="role">
+                教授
+            </div>
+            <div class="profile">
+                <!--  -->
+            </div>
+            <span class="name">
+                <!--  -->
+            </span>
+        </div>
         <div class="profileframe">
             <div class="role">
                 教授
