--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,10 @@
-<app-navbar>
-  <!--  -->
-</app-navbar>
-<div class="body">
-  <router-outlet/>
+<div class="view">
+  <div class="navbar">
+    <app-navbar>
+      <!--  -->
+    </app-navbar>
+  </div>
+  <div class="spa">
+    <router-outlet/>
+  </div>
 </div>
