--- a/Frontend/src/app/pages/public/member/member.component.css
+++ b/Frontend/src/app/pages/public/member/member.component.css
@@ -61,8 +61,8 @@
     display: flex;
     flex-direction: block;
     margin: auto;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .profileframe {
@@ -73,7 +73,7 @@
 }
 
 .role {
-    font-size: 4vw;
+    font-size: 30px;
     color: #f0f0f0;
     text-align: center;
     display: flex;
@@ -81,14 +81,14 @@
 }
 
 .profile {
-    width: 25vw;
-    height: 25vw;
+    width: 200px;
+    height: 200px;
     margin: auto;
     background-color:grey;
 }
 
 .name {
-    font-size: 4vw;
+    font-size: 30px;
     color: #f0f0f0;
     text-align: center;
     display: flex;
