--- a/Frontend/src/app/pages/public/member/member.component.html
+++ b/Frontend/src/app/pages/public/member/member.component.html
@@ -11,7 +11,7 @@
     <div class="rowframe">
         <div class="profileframe">
             <div class="role">
-                副教授兼系主任
+                系主任
             </div>
             <div class="profile">
                 <img class="profile" src="https://www.math.fju.edu.tw/images/tlpteam/l_chien-chang-yen-1626176770.jpg">
@@ -52,7 +52,7 @@
                 團長
             </div>
             <div class="profile">
-                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/JWH.png">
+                <img class="short-profile" src="member/JWH.png">
             </div>
             <span class="name">
                 簡偉恆
@@ -63,7 +63,7 @@
                 副團長
             </div>
             <div class="profile">
-                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/LYH.jpg">
+                <img class="short-profile" src="member/LYH.jpg">
             </div>
             <span class="name">
                 盧詠涵
@@ -118,7 +118,7 @@
                 UI,UX設計
             </div>
             <div class="profile">
-                <img style="width: 150px;display: flex; margin: auto;" class="profile" src="member/ZZW.jpg">
+                <img class="short-profile" src="member/ZZW.jpg">
             </div>
             <span class="name">
                 鄭兆崴
