--- a/Frontend/src/app/pages/superadmin/promote/promote.component.html
+++ b/Frontend/src/app/pages/superadmin/promote/promote.component.html
@@ -58,11 +58,7 @@
                         <td class="user-id">{{ user.id }}</td>
                         <td class="username">
                             <div class="user-info">
-                                <img 
-                                [src]="user.avatar_url || '/assets/default-avatar.png'" 
-                                [alt]="user.username"
-                                class="user-avatar"
-                                >
+                                <img class="user-avatar" [src]="'http://localhost:5000/'+ user.avatar_url"/>
                                 <span>{{ user.username }}</span>
                             </div>
                         </td>
