--- a/Frontend/src/app/pages/private/profile/profile.component.html
+++ b/Frontend/src/app/pages/private/profile/profile.component.html
@@ -1,8 +1,7 @@
-<div>
+<div class="profile">
     <div *ngIf="user">
       <p>歡迎回來,{{ user.username }},{{ user.nickname }}！</p>
     </div>
-  
     <div *ngIf="user">
         <h2>我的個人資料</h2>
         <p><strong>帳號：</strong>{{ user.username }}</p>
@@ -26,20 +25,20 @@
             <button (click)="saveProfile()">儲存</button>
             <button (click)="editing = false">取消</button>
         </div>
-        <p *ngIf="success" style="color: green">{{ success }}</p>
+        <p *ngIf="success" class="success-message">{{ success }}</p>
     </div>
-</div>
-<div>
-    <h3>頭像</h3>
-    <div *ngIf="user?.avatar_url">
-        <p>目前頭像：</p>
-        <img [src]="'http://localhost:5000/'+ user.avatar_url" width="120" height="120" />
+    <div class="avatar-section">
+        <h3>頭像</h3>
+        <div *ngIf="user?.avatar_url">
+            <p>目前頭像：</p>
+            <img [src]="'http://localhost:5000/'+ user.avatar_url" width="120" height="120" />
+        </div>
+        <p>更換新頭像：</p>
+        <input type="file" (change)="onFileSelected($event)">
+        <div *ngIf="avatarPreview">
+            <p>預覽：</p>
+            <img [src]="avatarPreview" width="120" height="120">
+        </div>
+        <button (click)="uploadAvatar()" [disabled]="!selectedFile">上傳頭像</button>
     </div>
-    <p>更換新頭像：</p>
-    <input type="file" (change)="onFileSelected($event)">
-    <div *ngIf="avatarPreview">
-        <p>預覽：</p>
-        <img [src]="avatarPreview" width="120" height="120">
-    </div>
-    <button (click)="uploadAvatar()" [disabled]="!selectedFile">上傳頭像</button>
 </div>
