--- a/Frontend/src/app/pages/private/square/square.component.css
+++ b/Frontend/src/app/pages/private/square/square.component.css
@@ -1,5 +1,8 @@
 .square {
-  margin-top: 73px;
+  margin-top: 83px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 4px 24px rgba(0,0,0,0.08);
