--- a/Frontend/src/app/shared/components/navbar/navbar.component.css
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.css
@@ -8,7 +8,8 @@
     padding-top: 5px;
     padding-bottom: 10px;
     border-radius: 12px;
-    margin-bottom: 5px;
+    margin-bottom: 50px;
+    margin-left: 10px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.08);
 }
 
@@ -21,7 +22,7 @@
     border-radius: 8px;
     transition: background 0.2s, color 0.2s, box-shadow 0.2s;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 2vw;
     letter-spacing: 0.5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.04);
     background: #fff;
@@ -74,6 +75,7 @@ a, .nav, .nav-private, .nav-admin, .nav-superadmin {
   padding-top: 16px;
   padding-right: 10px;
   backdrop-filter: blur(100px);
+  width: 70vw;
 }
 
 .sidebar.collapsed {
@@ -111,7 +113,6 @@ body, .body, .view {
   .navbar { grid-template-columns: repeat(7, 1fr); }
   .sidebar {
       transform: translateX(0%);
-      width: 75vw;
       min-width: 0;
     }
 }
@@ -119,7 +120,6 @@ body, .body, .view {
   .navbar { grid-template-columns: repeat(7, 1fr); }
   .sidebar {
       transform: translateX(0%);
-      width: 75vw;
       min-width: 0;
     }
 }
@@ -127,7 +127,6 @@ body, .body, .view {
   .navbar { grid-template-columns: repeat(7, 1fr); }
   .sidebar {
       transform: translateX(0%);
-      width: 75vw;
       min-width: 0;
     }
 }
@@ -135,7 +134,6 @@ body, .body, .view {
   .navbar { grid-template-columns: repeat(7, 1fr); }
   .sidebar {
       transform: translateX(0%);
-      width: 75vw;
       min-width: 0;
     }
 }
@@ -143,7 +141,6 @@ body, .body, .view {
   .navbar { grid-template-columns: repeat(3, 1fr); }
   .sidebar {
       transform: translateX(0%);
-      width: 75vw;
       min-width: 0;
     }
 }
